--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+langchain_core
 langchain
 langchain_community 
 langchain_huggingface
@@ -10,4 +11,5 @@ google-cloud-bigquery
 google-cloud-bigquery-storage
 sqlalchemy-bigquery
 fastapi
+langchain_google_genai
 
